# rag-engine

./: .env  .gitignore  LICENSE  main.py  pyproject.toml
src/: .env.example  pyproject.toml
src/controllers/: BaseController.py  DataController.py  ProjectController.py
src/helpers/: config.py
src/models/enums/: ResponseEnums.py
src/routes/: base.py  data.py
