[project]
name = "rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
